--- a/index.html
+++ b/index.html
@@ -1,3 +1,100 @@
+<!DOCTYPE html>
+<html lang="zh-cn">
+<head>
+	<meta charset="utf-8"/>
+	<title>翠屏紫气钟山 - 徐庄社区 - 玄武湖街道 - 玄武区 - 南京市 - 江苏省</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui" />
+	<!-- 新 Bootstrap4 核心 CSS 文件 -->
+	<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+	<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+	<script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+	<!-- bootstrap.bundle.min.js 用于弹窗、提示、下拉菜单，包含了 popper.min.js -->
+	<script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script> 
+	<!-- 最新的 Bootstrap4 核心 JavaScript 文件 -->
+	<script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="Content/style.css">
+	<link href="Content/font-awesome/css/font-awesome.min.css?v=20191115" rel="stylesheet" />
+    <link href="Content/Hui-iconfont/iconfont.css" rel="stylesheet" />
+    <link href="Content/aliyun-font/alifont.css" rel="stylesheet" />
+    <link href="Content/iconic/css/material-design-iconic-font.css" rel="stylesheet" />
+	<style>
+		small{color:#f00 !important;font-size: 16px !important;font-weight: bold !important;}
+		.image-preview-2023{max-width: 100%;}
+	</style>
+	<!-- https://www.17sucai.com/pins/demo-show?id=8925&st=kI9u1gwx2KvdbtWGfVbeJA&e=1691241422 --->
+</head>
+<body>
+<div class="timeline animated">
+	
+	<div class="timeline-row active">
+		<div class="timeline-time"><small>2023-08-05</small>中午</div>
+		<div class="timeline-icon">
+			<div class="bg-primary"><i class="fa fa-bullhorn"></i></div>
+		</div>
+		<div class="panel timeline-content">
+			<div class="panel-body">
+				<h2>物业解散业主群"紫气钟山小满服务群"</h2>
+				<img class="img-responsive image-preview-2023" src="upfile/20230805000000.png" />
+				<p>物业私聊：业主您好，业主服务群先解散了，后期可能会从组，到时拉您，现在群里好多都不认识</p>
+			</div>
+		</div>
+	</div>
+	
+	<div class="timeline-row active">
+		<div class="timeline-time"><small>2023-08-05</small>07:16</div>
+		<div class="timeline-icon">
+			<div class="bg-warning"><i class="fa fa-quote-right"></i></div>
+		</div>
+		<div class="panel timeline-content">
+			<div class="panel-body">
+				<img class="img-responsive image-preview-2023" src="upfile/20230805071600.png" />
+			</div>
+		</div>
+	</div>
+	
+	<div class="timeline-row active">
+		<div class="timeline-time"><small>2023-08-04</small>12:05</div>
+		<div class="timeline-icon">
+			<div class="bg-warning"><i class="fa fa-quote-right"></i></div>
+		</div>
+		<div class="panel timeline-content">
+			<div class="panel-body">
+				<img class="img-responsive image-preview-2023" src="upfile/20230804120500.png">
+			</div>
+		</div>
+	</div>
+	
+	<div class="timeline-row active">
+		<div class="timeline-time"><small>2023-08-02</small>07:19</div>
+		<div class="timeline-icon">
+			<div class="bg-warning"><i class="fa fa-quote-right"></i></div>
+		</div>
+		<div class="panel timeline-content">
+			<div class="panel-body">
+				<img class="img-responsive image-preview-2023" src="upfile/20230802071900.png">
+			</div>
+		</div>
+	</div>
+	
+	<div class="timeline-row active">
+		<div class="timeline-time"><small>2023-08-01</small>14:54</div>
+		<div class="timeline-icon">
+			<div class="bg-warning"><i class="fa fa-quote-right"></i></div>
+		</div>
+		<div class="panel timeline-content">
+			<img class="img-responsive image-preview-2023" src="upfile/202308011454.png">
+		</div>
+	</div>
+	
+	<div class="timeline-row active">
+		<div class="timeline-time"><small>2023-07-27</small>14:12</div>
+		<div class="timeline-icon">
+			<div class="bg-warning"><i class="fa fa-quote-right"></i></div>
+		</div>
+		<div class="panel timeline-content">
+			<img class="img-responsive image-preview-2023" src="upfile/20230727141200.png">
+		</div>
+	</div>
+</div>
+</body>
 <html>
-
-</html>
