--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script> 
 	<!-- 最新的 Bootstrap4 核心 JavaScript 文件 -->
 	<script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	<script src="Content/jquery-3.4.1.min.js"></script>
+	<script src="Content/jquery.lazyload.js"></script>
 	<link rel="stylesheet" href="Content/style.css">
 	<link href="Content/font-awesome/css/font-awesome.min.css?v=20191115" rel="stylesheet" />
     <link href="Content/Hui-iconfont/iconfont.css" rel="stylesheet" />
@@ -34,7 +36,7 @@
 		<div class="panel timeline-content">
 			<div class="panel-body">
 				<h2>物业解散业主群"紫气钟山小满服务群"</h2>
-				<img class="img-responsive image-preview-2023" src="Upfile/20230805000000.png" />
+				<img class="img-responsive image-preview-2023 lazy" data-original="Upfile/20230805000000.png" />
 				<p>物业私聊：业主您好，业主服务群先解散了，后期可能会从组，到时拉您，现在群里好多都不认识</p>
 			</div>
 		</div>
@@ -47,7 +49,7 @@
 		</div>
 		<div class="panel timeline-content">
 			<div class="panel-body">
-				<img class="img-responsive image-preview-2023" src="Upfile/20230805071600.png" />
+				<img class="img-responsive image-preview-2023 lazy" data-original="Upfile/20230805071600.png" />
 			</div>
 		</div>
 	</div>
@@ -59,7 +61,7 @@
 		</div>
 		<div class="panel timeline-content">
 			<div class="panel-body">
-				<img class="img-responsive image-preview-2023" src="Upfile/20230804120500.png">
+				<img class="img-responsive image-preview-2023 lazy" data-original="Upfile/20230804120500.png">
 			</div>
 		</div>
 	</div>
@@ -71,7 +73,7 @@
 		</div>
 		<div class="panel timeline-content">
 			<div class="panel-body">
-				<img class="img-responsive image-preview-2023" src="Upfile/20230802071900.png">
+				<img class="img-responsive image-preview-2023 lazy" data-original="Upfile/20230802071900.png">
 			</div>
 		</div>
 	</div>
@@ -82,7 +84,7 @@
 			<div class="bg-warning"><i class="fa fa-quote-right"></i></div>
 		</div>
 		<div class="panel timeline-content">
-			<img class="img-responsive image-preview-2023" src="Upfile/202308011454.png">
+			<img class="img-responsive image-preview-2023 lazy" data-original="Upfile/202308011454.png">
 		</div>
 	</div>
 	
@@ -92,9 +94,14 @@
 			<div class="bg-warning"><i class="fa fa-quote-right"></i></div>
 		</div>
 		<div class="panel timeline-content">
-			<img class="img-responsive image-preview-2023" src="Upfile/20230727141200.png">
+			<img class="img-responsive image-preview-2023 lazy" data-original="Upfile/20230727141200.png">
 		</div>
 	</div>
 </div>
+    <script type="text/javascript" charset="utf-8">
+      jQuery(function() {
+          jQuery("img.lazy").lazyload({effect: "fadeIn"});
+      });
+    </script>
 </body>
 <html>
