--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head>
 	<meta charset="utf-8"/>
-	<title>liyinlang.github.io</title>
+	<title>小狼</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui" />
 	<!-- 新 Bootstrap4 核心 CSS 文件 -->
 	<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
@@ -20,6 +20,9 @@
 	<link href="Content/aliyun-font/alifont.css" rel="stylesheet" />
 	<link href="Content/iconic/css/material-design-iconic-font.css" rel="stylesheet" />
 	<!-- https://www.17sucai.com/pins/demo-show?id=8925&st=kI9u1gwx2KvdbtWGfVbeJA&e=1691241422 --->
+	<style>
+		body{background:#fff;}
+	</style>
 </head>
 <body>
     <div class="container">
