--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<link href="Content/iconic/css/material-design-iconic-font.css" rel="stylesheet" />
 	<!-- https://www.17sucai.com/pins/demo-show?id=8925&st=kI9u1gwx2KvdbtWGfVbeJA&e=1691241422 --->
 	<style>
-		body{background:#fff;}
+		body{background:#fff;margin:0;padding:0;}
 	</style>
 </head>
 <body>
